# lang_v2

./: CMakeLists.txt
src/: cfg.h  main.cpp
